deploy (0.2-16) lenny; urgency=low

  * NOT RELEASED
  * fix indent, add comments

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 03 Jun 2009 13:58:46 +0200

deploy (0.2-15) lenny; urgency=low

  * don't copy hooks .svn

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 03 Jun 2009 11:55:09 +0200

deploy (0.2-14) lenny; urgency=low

  * nicer output in logs
  * give hooks a working dir
  * the magic 'here' path is now always absolute

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 27 May 2009 16:35:19 +0200

deploy (0.2-13) lenny; urgency=low

  * fix bug in database restore 

 -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 19 May 2009 14:32:46 +0200

deploy (0.2-12) lenny; urgency=low

  * add pre-create-code and post-create-code hooks
  * nicer variable name in hooks
  * fix comments typo in deploy.cfg
  * add 'ignore' option in code and files components

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 15 May 2009 11:43:04 +0200

deploy (0.2-11) lenny; urgency=low

  * allow to deploy only database tables
  * allow to cleanely deactivate the 'file', 'code', 'database' or 'apache' component 

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 15 May 2009 10:38:04 +0200

deploy (0.2-10) lenny; urgency=low

  * allow to deploy project without databases

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 15 Apr 2009 17:04:07 +0200

deploy (0.2-9) lenny; urgency=low

  * include symlinks in code and files

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 03 Apr 2009 11:58:36 +0200

deploy (0.2-8) lenny; urgency=low

  * be nice when restoring packages without componant

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 20 Mar 2009 14:29:20 +0100

deploy (0.2-7) lenny; urgency=low

  * bugfix
  * remote deploy hosts

 -- Frederic Junod <frederic.junod@camptocamp.com>  Thu, 19 Mar 2009 14:52:14 +0100

deploy (0.2-6) lenny; urgency=low

  * run default hooks
  * remote deploy
